add input to glide

--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,6 @@ package: github.com/flood-io/cli
 import:
 - package: github.com/pkg/errors
   version: ^0.8.0
+- package: google.golang.org/grpc
+  version: ^1.9.1
+- package: github.com/tcnksm/go-input
