--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,21 +22,10 @@ builds:
   - darwin_amd64
   main: .
   ldflags: -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
+  env:
+    - CGO_ENABLED=0
   binary: flood
   lang: go
-# archive:
-  # name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm
-    # }}v{{ .Arm }}{{ end }}'
-  # format: tar.gz
-  # files:
-  # - licence*
-  # - LICENCE*
-  # - license*
-  # - LICENSE*
-  # - readme*
-  # - README*
-  # - changelog*
-  # - CHANGELOG*
 # fpm:
   # name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm
     # }}v{{ .Arm }}{{ end }}'
