--- a/static/init-skeleton/Makefile
+++ b/static/init-skeleton/Makefile
@@ -1,6 +1,6 @@
 
 INPUTS := test.ts $(wildcard *.json) yarn.lock
-IGNORE := "-ignore=Makefile" "-ignore=.*.log"
+IGNORE := "-ignore=Makefile" "-ignore=.*.log" "-ignore=bindata.go" "-ignore=.gitignore"
 
 bindata.go : ${INPUTS}
 	go-bindata ${IGNORE} -pkg initskeleton .
