--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,6 +15,8 @@ brew:
   homepage: "https://github.com/flood-io/cli"
   install: bin.install "flood"
   test: system bin/"flood", "version"
+  # XXX only before making cli public
+  download_strategy: GitHubPrivateRepositoryReleaseDownloadStrategy
 
 
 builds:
