--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -61,3 +61,7 @@ required = [
 [[constraint]]
   name = "github.com/jteeuwen/go-bindata"
   version = "3.0.7"
+
+[[constraint]]
+  name = "github.com/bugsnag/bugsnag-go"
+  version = "1.3.0"
