--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -26,7 +26,7 @@ builds:
   - linux_amd64
   - darwin_amd64
   main: .
-  ldflags: -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
+  ldflags: -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}} -X main.bugsnagAPIKey={{.Env.BUGSNAG_API_KEY}}
   env:
     - CGO_ENABLED=0
   binary: flood
