target agent=buildbox

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,11 +1,15 @@
 steps:
   - command: "scripts/ci/build.sh"
     label: ":hammer: Build ting"
+    agents:
+      agent: "buildbox"
 
   - "wait"
 
   - command: "scripts/ci/test.sh"
     label: ":llama: Test ting"
+    agents:
+      agent: "buildbox"
     concurrency: 1
     concurrency_group: "tests"
 
@@ -13,3 +17,5 @@ steps:
 
   - command: "scripts/ci/release.sh"
     label: ":octocat: GitHub release that ting"
+    agents:
+      agent: "buildbox"
